--- a/task/src/main/webapp/css/index.css
+++ b/task/src/main/webapp/css/index.css
@@ -43,6 +43,9 @@ body {
 .content td{
     border-bottom: 1px #DCDCDC solid;
 }
+#full_name {
+    text-align: justify;
+}
 
 #content_task{
     text-align: justify;
