--- a/task/src/main/webapp/resources/css/page-private.css
+++ b/task/src/main/webapp/resources/css/page-private.css
@@ -10,64 +10,60 @@ and open the template in the editor.
 html body {
     min-width: 1024px;
 }
-.table {
-    display: table;
-    width: 100%;
-}
-.table-th{
+.topic{
     background: gold;
-    text-align: center;
-    font-weight: bold;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
 }
-.table-td {
-    border-bottom: 1px solid black;
-}
-.row {
-    display: table-row;
-    padding: 10px;
-}
-.cell{
-    display: table-cell;
-}
-.content{
+.topic a{
     padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 1px;
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
 }
-.main-table{
+.topic a.selected{
+    background: black;
+    color: white;
+    border: 1px solid black;
+}
+.topic a.add{
+    margin-top: 2px;
+    margin-right: 6px;
+    font-size: 18px;
+    float: right;
+    font-weight: bold;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    padding-right: 24px;
+    padding-left: 24px;
+}
+.table-div{
     display: table;
     width: 100%;
 }
-.menu {
-    width: 200px;
-    padding-right: 6px;
+.row-div{
+    display: table-row;
 }
-.link-dekoration{
-    text-decoration: none;
-    color: black;
-}
-.menu-link-add{
-    background: gold;
-    display: block;
+.th div{
+    display: table-cell;
     text-align: center;
-    margin-top: 6px;
+    border-bottom: 2px solid black;
     padding: 6px;
 }
-.menu-blok{
-    display: block;
-    padding: 6px;
-}
-.menu-blok-border{
-    padding-bottom: 12px;
-}
-.menu-select{
+.td div{
+    padding-left: 12px;
+    display: table-cell;
     border-bottom: 1px solid black;
-    border-top: 1px solid black;
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
-
-.decoration-none a{
+.td a{
     display: block;
     text-decoration: none;
     color: black;
 }
-.select:hover {
+.td:hover {
     background: gold;
 }
