add selector form select.no_button

--- a/task/src/main/webapp/resources/css/forms.css
+++ b/task/src/main/webapp/resources/css/forms.css
@@ -48,6 +48,9 @@ form select {
     padding: 2px;
     background: white;
 }
+form select.no-button{
+    width: 405px;
+}
 .buttons{
     margin-top: 24px;
     border-top: 2px solid black;
