--- a/task/src/main/webapp/resources/css/page-private.css
+++ b/task/src/main/webapp/resources/css/page-private.css
@@ -15,35 +15,45 @@ and open the template in the editor.
 html body {
     min-width: 1024px;
     font-family: 'Ubuntu';
+    padding: 0px;
+    margin: 0px;
 }
-.topic{
+nav{
+    width: 100%;
+    border-bottom: 1px solid black;
+}
+nav ul{
+    list-style-type: none;
+    padding: 12px;
+    margin: 0;
     background: gold;
-    border-top: 2px solid black;
-    border-bottom: 2px solid black;
 }
-.topic a{
-    padding-left: 12px;
-    padding-right: 12px;
-    padding-bottom: 1px;
-    font-size: 24px;
+nav li{
+    display: inline;
+}
+nav a{
+    font-size: 20px;
+    text-height: inherit;
     text-decoration: none;
     color: black;
+    padding: 12px;
+    padding-bottom: 13px;
 }
-.topic a.selected{
+nav a.select{
     background: black;
-    color: white;
+    color: gold;  
+}
+.filtr {
+    margin: 12px;
+    background: gold;
     border: 1px solid black;
 }
-.topic a.add{
-    margin-top: 2px;
-    margin-right: 6px;
-    font-size: 18px;
-    float: right;
-    font-weight: bold;
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    padding-right: 24px;
-    padding-left: 24px;
+.filtr div {
+    display: inline;
+    margin: 6px;
+}
+.filtr select{
+    margin: 6px;
 }
 .table-div{
     display: table;
