add style button new elment

--- a/task/src/main/webapp/resources/css/page-private.css
+++ b/task/src/main/webapp/resources/css/page-private.css
@@ -43,6 +43,10 @@ nav a.select{
     background: black;
     color: gold;  
 }
+nav li.add{
+   float: right;
+   border-left: 2px solid black;
+}
 .filtr {
     margin: 12px;
     background: gold;
