--- a/task/src/main/webapp/resources/css/login.css
+++ b/task/src/main/webapp/resources/css/login.css
@@ -11,7 +11,7 @@ body {
 
 form {
 	background: white;
-	padding: 12px;
+	padding: 24px;
 	width: 300px;
 	display: flex;
 	flex-direction: column;
@@ -47,4 +47,9 @@ aside > footer > a {
 	padding: 12px;
 	text-decoration: none;
 	color: black;
+}
+.error {
+	background: #FA8072;
+	padding: 24px;
+	margin-bottom: 24px;
 }
