--- a/task/src/main/webapp/WEB-INF/jspf/employees-menu.jspf
+++ b/task/src/main/webapp/WEB-INF/jspf/employees-menu.jspf
@@ -1,6 +1,10 @@
 <%@ page pageEncoding="UTF-8"%>
 <%@taglib prefix="spring" uri="http://www.springframework.org/tags"%>
-<li><a href="../employee/"><spring:message code="label.main.menu.employee"/></a></li>
-<li><a href="../post/"><spring:message code="label.main.menu.post"/></a></li>
-<li><a href="../department/"><spring:message code="label.main.menu.departmen"/></a></li>
-<li><a href="../company/"><spring:message code="label.main.menu.company"/></a></li>
+
+<a>Співробітник<b class="caret"></b></a>
+<ul>
+	<li><a href="../employee/"><spring:message code="label.main.menu.employee"/></a></li>
+	<li><a href="../post/"><spring:message code="label.main.menu.post"/></a></li>
+	<li><a href="../department/"><spring:message code="label.main.menu.departmen"/></a></li>
+	<li><a href="../company/"><spring:message code="label.main.menu.company"/></a></li>
+</ul>
