--- a/task/src/main/webapp/WEB-INF/jspf/main-menu.jspf
+++ b/task/src/main/webapp/WEB-INF/jspf/main-menu.jspf
@@ -1,18 +1,12 @@
 <%@ page pageEncoding="UTF-8"%>
 <%@taglib prefix="spring" uri="http://www.springframework.org/tags"%>
 
-<nav class="navbar navbar-default" role="navigation">
-	<div class="container-fluid">
-    	<!-- Collect the nav links, forms, and other content for toggling -->
-    	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    		<ul class="nav navbar-nav">
-    		 <li class="dropdown">
-          		<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-          			<ul class="dropdown-menu">
-						<%@include file="employees-menu.jspf" %>
-          			</ul>
-        		</li>
-    		</ul>
-		</div><!-- /.navbar-collapse -->
-	</div><!-- /.container-fluid -->
+<nav>
+	<div class="container">
+    	<ul>
+    		<li>
+				<%@include file="employees-menu.jspf" %>
+        	</li>
+    	</ul>
+	</div>
 </nav>
