--- a/task/src/main/webapp/resources/css/login.css
+++ b/task/src/main/webapp/resources/css/login.css
@@ -12,11 +12,11 @@ body {
 form {
 	background: white;
 	padding: 24px;
-	width: 300px;
 	display: flex;
 	flex-direction: column;
 	font-size: 18px;
 }
+
 input {
 	font-family: Arial;
 	font-size: 14px;
@@ -25,29 +25,20 @@ input {
 	margin-top: 6px;
 	margin-bottom: 6px;
 }
-input[type="submit"] {
+
+button {
 	margin-top: 12px;
-	margin-bottom: 0;
+	padding:12px;
 }
+
 aside {
 	padding-top: 15%;
 }
-aside > header{
-	font-size: 26px;
-	text-align: center;
-	margin-bottom: 12px;
-}
+
 aside > footer{
 	padding-top: 24px;
 }
-aside > footer > a {
-	display:block;
-	text-align: center;
-	border: 1px #B5B5B5 solid;
-	padding: 24px;
-	text-decoration: none;
-	color: black;
-}
+
 .error {
 	background: #FA8072;
 	padding: 24px;
