--- a/task/src/main/webapp/resources/css/main.css
+++ b/task/src/main/webapp/resources/css/main.css
@@ -6,9 +6,15 @@ html, body {
 	font-family: Sans, Arial;
 }
 header{padding-top: 12px;}
+
 button, .button-add{
+	font-family: Sans, Arial;
+	color: #666666;
+	padding:6px;
 	border:1px solid #666666;
-	background: #f9f9f9;
+}
+input, label, select{
+	padding: 6px;
 }
 .button-add{
 	width: 165px;
@@ -167,15 +173,19 @@ li.select{
 	display: none;
 }
 .page-header{
-	padding-left: 24px;
 	color: white;
-	background: #666666;
+	
 }
+.page-header > h2 {
+	background: #666666;
+	padding: 6px;
+	padding-left: 24px;
+}
+
 .box-form{
 	margin: 24px auto;
 	max-width: 570px;
     padding: 6px;
-    padding-left: 24px;
 }
 .form-horisontal{
 	display: flex;
@@ -189,14 +199,19 @@ li.select{
 	margin-bottom: 6px;
 }
 .form-group label {
+	padding-left: 24px;
 	flex-shrink: 0;
 	width: 200px;
 	margin-right: 4px;
 	margin-left: 4px;
 }
 .form-group input{
+	
 	flex-grow: 1;
 	font-family: Sans, Arial;
+}
+.form-group > select, input{
+	margin-right: 12px;
 }
 .form-group select{
 	max-width: 362px;
@@ -227,3 +242,4 @@ li.select{
 .filtr select{
     margin: 6px;
 }
+
