--- a/task/src/main/webapp/WEB-INF/views/login.html
+++ b/task/src/main/webapp/WEB-INF/views/login.html
@@ -3,28 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <link th:href="@{/resources/css/foundation.css}" rel="stylesheet" />
-<title>Insert title here</title>
+<title th:text="#{titlepage.login}">Login</title>
 </head>
 <body>
 <div style="margin-top: 10%" class="row align-center">
 		<div class="column small-12 large-6">
 			<form id="login" action="#" method="post" th:object="${user}">
 				<h3 style="text-align: center;">
-					<span th:text="#{label.login.titleLogin}"></span>
+					<span th:text="#{titleform.login}"></span>
 				</h3>
 
 				<div class="medium-12 cell">
-					<label> <span th:text="#{label.login.username}"></span> <input
+					<label> <span th:text="#{inputlabel.username}"></span> <input
 						type="text" id="username" name="username" autofocus="autofocus" />
 					</label>
 				</div>
 				<div class="medium-12 cell">
-					<label> <span th:text="#{label.login.password}"></span> <input
+					<label> <span th:text="#{inputlabel.password}"></span> <input
 						type="password" id="password" name="password"
 						autofocus="autofocus" />
 					</label>
 				</div>
-				<button class="button expanded" th:text="#{label.login.submitLogin}"></button>
+				<button class="button expanded" th:text="#{buttonname.login}"></button>
 			</form>
 		</div>
 	</div>
