--- a/task/src/main/webapp/WEB-INF/views/employees.html
+++ b/task/src/main/webapp/WEB-INF/views/employees.html
@@ -3,10 +3,65 @@
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 <meta charset="UTF-8">
-<link th:href="@{/resources/css/foundation.css}" rel="stylesheet" />
+<link th:insert="templates/head.html" />
 <title>title</title>
 </head>
 <body>
 	<div th:insert="templates/top-bar.html"></div>
+	<br>
+	<div class="row">
+		<div class="columns">
+			<table class="table">
+				<thead>
+					<tr>
+						<td th:text="#{inputlabel.fullname}"></td>
+						<td th:text="#{inputlabel.company}"></td>
+						<td th:text="#{inputlabel.department}"></td>
+						<td></td>
+						<td>
+							<ul class="menu">
+								<li><button class="button" data-open="addEmployee">+</button></li>
+							</ul>
+						</td>
+					</tr>
+				</thead>
+				<tbody th:each="employee : ${allEmployee}">
+					<tr>
+						<td
+							th:text="${employee.surname + ' ' + employee.name + ' ' + employee.patronymic}"></td>
+						<td th:text="${employee.enterprise}"></td>
+						<td th:text="${employee.department}"></td>
+						<td><a>edit</a> </td>
+						<td><a data-open="exampleModal1">delete</a></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<!-- add form -->
+		<div class="reveal" id="addEmployee" data-reveal>
+			<div class="column small-12 large-12">
+			<h1 th:text="#{titleform.newEmployee}">New employee</h1>
+			<form class="row" action="" method="post" th:object="${employee}">
+				<div class="medium-12 cell">
+					<label> <span th:text="#{inputlabel.surname}"></span> <input
+						type="text" id="surname" name="surname" autofocus="autofocus" />
+					</label>
+				</div>
+				<div class="medium-12 cell">
+					<label> <span th:text="#{inputlabel.nameEmployee}"></span> <input
+						type="text" id="nameEmployee" name="nameEmployee" autofocus="autofocus" />
+					</label>
+				</div>
+			</form>
+			</div>
+			<button class="close-button" data-close aria-label="Close modal"
+				type="button">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+	</div>
+	<script type="text/javascript">
+		$(document).foundation();
+	</script>
 </body>
 </html>
