--- a/task/src/main/webapp/WEB-INF/views/employees.html
+++ b/task/src/main/webapp/WEB-INF/views/employees.html
@@ -20,7 +20,7 @@
 						<td></td>
 						<td>
 							<ul class="menu">
-								<li><button id="addButton" class="button" data-open="addEmployee">+</button></li>
+								<li><a th:href="@{employee/add}" th:text="#{buttonname.login}" class="button">Sing in</a></li>
 							</ul>
 						</td>
 					</tr>
