--- a/task/src/main/webapp/WEB-INF/views/employee-edit.html
+++ b/task/src/main/webapp/WEB-INF/views/employee-edit.html
@@ -12,7 +12,7 @@
 	<div class="row">	
 		
 			<div class="column small-12 large-12">
-			<h1 th:text="#{titleform.newEmployee}">New employee</h1>
+			<h1 th:text="#{titleform.updateEmployee}">Update employee</h1>
 			<form class="row" th:action="@{newEmployee}" method="post" th:object="${employee}">
 				<span class="column small-12 large-12" th:insert="templates/employee.html"></span>
 			</form>
