--- a/task/src/main/webapp/WEB-INF/views/templates/employee.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/employee.html
@@ -94,7 +94,7 @@
 				
 				<div class="row ">
 					<fieldset class="column align-right">
-						<button type="submit" class="button" name="newEmployee" th:text="#{buttonname.submit}">Add row</button>
+						<button type="submit" class="button" name="save"  th:text="#{buttonname.submit}">Add row</button>
 					</fieldset>
 				</div>
 </html>
