--- a/task/src/main/webapp/WEB-INF/views/employee-edit.html
+++ b/task/src/main/webapp/WEB-INF/views/employee-edit.html
@@ -12,10 +12,10 @@
 	<div class="row">	
 		
 			<div class="column small-12 large-12">
-			<h1 th:text="#{titleform.new}">New employee</h1>
-			<form class="row" th:action="@{add}" method="post" th:object="${employee}">
+			<h1 th:text="#{titleform.edit}">New employee</h1>
+			<form class="row" th:action="@{{id}(id=${employee.id})}" method="post" th:object="${employee}">
 				<span class="column small-12 large-12" th:insert="templates/employee.html"></span>
-				
+				<input type="hidden" name="id" th:value="*{id}">
 			</form>
 			</div>
 	</div>
