--- a/task/src/main/webapp/WEB-INF/views/home.html
+++ b/task/src/main/webapp/WEB-INF/views/home.html
@@ -10,7 +10,9 @@
 	<div th:insert="templates/top-bar.html"></div>
 	<br>
 	<div class="row">
-		<a th:href="@{employee/}" th:text="#{titleform.emploee}" class="column small-12 large-4 callout">
+		<a href="#" th:href="@{employee/}" th:text="#{titleform.emploee}" class="column small-12 large-4 callout">
+		</a>
+		<a href="#" th:href="@{position/}" th:text="#{titleform.position}" class="column small-12 large-4 callout">
 		</a>
 	</div>
 	<script type="text/javascript">
