--- a/task/src/main/webapp/WEB-INF/views/employees.html
+++ b/task/src/main/webapp/WEB-INF/views/employees.html
@@ -7,7 +7,10 @@
 <title>title</title>
 </head>
 <body>
-	<div th:insert="templates/top-bar.html"></div>
+	<div class="top-bar" >
+		<div th:insert="templates/menu/top-admin.html"></div>
+		<div th:insert="templates/menu/logof-logon.html"></div>
+	</div>
 	<br>
 	<div class="row">
 		<div class="columns">
