--- a/task/src/main/webapp/WEB-INF/views/position/position-edit.html
+++ b/task/src/main/webapp/WEB-INF/views/position/position-edit.html
@@ -7,7 +7,10 @@
 <title th:text="#{titleform.editPosition}">title</title>
 </head>
 <body>
-	<div th:insert="templates/top-bar.html"></div>
+	<div class="top-bar" >
+		<div th:insert="templates/menu/top-directories.html"></div>
+		<div th:insert="templates/menu/logof-logon.html"></div>
+	</div>
 	<br>
 	<div class="row">
 		<div class="column small-12 large-12">
