--- a/task/src/main/webapp/WEB-INF/views/templates/menu/top-directories.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/menu/top-directories.html
@@ -5,7 +5,7 @@
 
 		<div class="top-bar-left">
 			<ul class="menu">
-				<li><a th:href="@{/home/}" th:text="#{titleform.home}">home</a></li>
+				<li><a th:href="@{/home}" th:text="#{titleform.home}">home</a></li>
 				<li><a th:href="@{/position/}" th:text="#{titleform.position}"></a></li>
 			</ul>
 		</div>
