--- a/task/src/main/webapp/WEB-INF/views/home.html
+++ b/task/src/main/webapp/WEB-INF/views/home.html
@@ -16,7 +16,7 @@
 					<a href="#" th:href="@{employee/}" th:text="#{titleform.admin}" class="hollow large button expanded"></a>
 				</div>
 				<div class="column small-12 large-4">
-					<a href="#" th:href="@{position}" th:text="#{titleform.home.directories}" class="hollow large button expanded"></a>
+					<a href="#" th:href="@{position/}" th:text="#{titleform.home.directories}" class="hollow large button expanded"></a>
 				</div>
 			</div>
 		</div>
