--- a/task/src/main/webapp/WEB-INF/views/templates/menu/top-directories.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/menu/top-directories.html
@@ -6,7 +6,8 @@
 		<div class="top-bar-left">
 			<ul class="menu">
 				<li><a th:href="@{/home}" th:text="#{titleform.home}">home</a></li>
-				<li><a th:href="@{/position/}" th:text="#{titleform.position}"></a></li>
+				<li><a th:href="@{/position/}" th:text="#{titleform.position}">position</a></li>
+				<li><a th:href="@{/room/}" th:text="#{titleform.room}">position</a></li>
 			</ul>
 		</div>
 		
