adding delete room

--- a/task/src/main/webapp/WEB-INF/views/room/rooms.html
+++ b/task/src/main/webapp/WEB-INF/views/room/rooms.html
@@ -55,7 +55,7 @@
 	<script type="text/javascript">
 		$(document).foundation();
 	</script>
-	<div th:if="${deletePosition}">
+	<div th:if="${deleteRoom}">
 		<script type="text/javascript">
 			$('#deleteRoom').foundation('open');	
 		</script>
