--- a/task/src/main/webapp/WEB-INF/views/templates/department-form.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/department-form.html
@@ -35,6 +35,13 @@
 	</div>
 </div>
 
+<div class="row">
+	<div class="medium-12 columns">
+		<span th:text="#{inputlabel.isdisable}"></span> 
+		<input type="checkbox" id="disable" th:field="*{disable}">
+	</div>
+</div>
+
 <div class="row ">
 	<fieldset class="column align-right">
 		<button type="submit" class="button" name="save"
