--- a/task/src/main/webapp/WEB-INF/views/templates/head.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/head.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html 
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+	xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:th="http://www.thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorator="template.html">
+    
+	<th:blick layout:fragment="link">
+		<link th:href="@{/resources/css/foundation.css}" rel="stylesheet" />
+		<link th:href="@{/resources/fonts/foundation-icons.css}" rel="stylesheet" />
+		<link th:href="@{/resources/css/app.css}" rel="stylesheet" />
+	</th:blick>
 	
-	<link th:href="@{/resources/css/foundation.css}" rel="stylesheet" />
-	<link th:href="@{/resources/fonts/foundation-icons.css}" rel="stylesheet" />
-	<script type="text/javascript" th:inline="javascript" th:src="@{/resources/js/vendor/jquery.js}"></script>
-	<script type="text/javascript" th:inline="javascript" th:src="@{/resources/js/vendor/foundation.js}"></script>
-	<script type="text/javascript" th:inline="javascript" th:src="@{/resources/js/vendor/what-input.js}"></script>
+	
+	<th:block layout:fragment="script">
+		<script type="application/javascript" th:src="@{/resources/js/vendor/jquery.js}"></script>
+		<script type="application/javascript" th:src="@{/resources/js/vendor/foundation.js}"></script>
+		<script type="application/javascript" th:src="@{/resources/js/vendor/what-input.js}"></script>
+	</th:block>
 </html>
