--- a/task/src/main/webapp/WEB-INF/views/templates/menu/logof-logon.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/menu/logof-logon.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
-<html 
-	xmlns:th="http://www.thymeleaf.org"
+<html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-
-		<div class="top-bar-right">
-			<ul class="menu">
-				<li>
-					<form name="logonLogoff" th:action="@{/logout}" method="POST">
-						<div sec:authorize="!isAuthenticated()">
-							<a href="#" th:href="home" th:text="#{buttonname.login}" class="button">Sing in</a>
-						</div>
-						<div sec:authorize="isAuthenticated()">
-							<input class="button expanded" type="submit" th:value="#{buttonname.logoff}" value="Sing out">
-						</div>
-					</form>
-				</li>
-			</ul>
-		</div>
+<div class="columns shrink app-dashboard-top-bar-actions">
+	<div sec:authorize="!isAuthenticated()">
+		<button th:href="home" th:text="#{buttonname.login}" class="button hollow">Sing in</button>
+	</div>
+	<div sec:authorize="isAuthenticated()">
+		<form name="logonLogoff" th:action="@{/logout}" method="POST">
+			<button class="button hollow expanded" type="submit" th:text="#{buttonname.logoff}" value="Sing out"></button>
+		</form>
+	</div>
+</div>
 </html>
