--- a/task/src/main/webapp/WEB-INF/views/templates/top-bar.html
+++ b/task/src/main/webapp/WEB-INF/views/templates/top-bar.html
@@ -2,24 +2,34 @@
 <html 
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
-<div class="top-bar">
-		<div class="top-bar-left">
-			<ul class="menu">
-			</ul>
-		</div>
-		<div class="top-bar-right">
-			<ul class="menu">
-				<li>
+
+<div class="app-dashboard shrink-medium">
+		<div class="row expanded app-dashboard-top-nav-bar">
+			<div class="columns medium-2">
+				<button data-toggle="app-dashboard-sidebar"
+					class="menu-icon hide-for-medium"></button>
+				<a class="app-dashboard-logo">INFORMER</a>
+			</div>
+			<div class="columns show-for-medium">
+				<div class="app-dashboard-search-bar-container">
+					<input class="app-dashboard-search" type="search"
+						placeholder="Search"> <i
+						class="app-dashboard-search-icon fa fa-search"></i>
+				</div>
+			</div>
+			<div class="columns shrink app-dashboard-top-bar-actions">
+				<div sec:authorize="!isAuthenticated()">
+					<button th:href="home" th:text="#{buttonname.login}"
+						class="button hollow">Sing in</button>
+				</div>
+				<div sec:authorize="isAuthenticated()">
 					<form name="logonLogoff" th:action="@{/logout}" method="POST">
-						<div sec:authorize="!isAuthenticated()">
-							<a href="#" th:href="home" th:text="#{buttonname.login}" class="button">Sing in</a>
-						</div>
-						<div sec:authorize="isAuthenticated()">
-							<input class="button expanded" type="submit" th:value="#{buttonname.logoff}" value="Sing out">
-						</div>
+						<button class="button hollow expanded" type="submit"
+							th:text="#{buttonname.logoff}" value="Sing out"></button>
 					</form>
-				</li>
-			</ul>
+				</div>
+
+			</div>
 		</div>
-	</div>
+
 </html>
